Connect to MongoDB

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/felipeog/fcc-social-media-backend#readme",
   "dependencies": {
     "apollo-server": "^2.19.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
     "mongoose": "^5.11.8"
   }
