--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "mongoose-paginate-v2": "^1.3.13",
     "node-fetch": "^2.6.1",
     "validator": "^13.5.2"
   },
